<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_tagline">Take your passwords everywhere.</string>
    <string name="app_logo">%1$s Logo</string>
    <string name="cancel">Cancel</string>
    <string name="learn_more">Learn more</string>
    <string name="learn_more_description">Open a link to Learn more</string>
    <string name="welcome_start_automatic_btn">%s</string>
    <string name="welcome_start_force_manual_btn">Different Account</string>
    <string name="welcome_start_btn">Get Started</string>
    <string name="welcome_instructions">To use %1$s, you’ll need a Firefox Account with saved logins.</string>
    <string name="welcome_learn_more_btn">Learn More</string>
    <string name="get_started_title">Get Started</string>
    <string name="backable_description">Back</string>
    <string name="menu_description">Menu</string>
    <string name="nav_menu_faq">FAQ</string>
    <string name="nav_menu_feedback">Provide Feedback</string>
    <string name="nav_menu_account">Account</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="lock_now">Lock Now</string>
    <string name="lock_icon_description">Lock icon image</string>
    <string name="unlock_button">Unlock</string>
    <string name="syncing_logins">Syncing your logins…</string>
    <string name="sort_description">Sort logins</string>
    <string name="sort_menu_az">Alphabetically</string>
    <string name="all_logins_a_z">All logins (A-Z)</string>
    <string name="sort_menu_recent">Recently Used</string>
    <string name="all_logins_recent">All logins (Recent)</string>
    <string name="search_description">Search logins</string>
    <string name="search_logins">search logins</string>
    <string name="search_logins_cap">Search logins</string>
    <string name="search_clear_content_description">Clear search bar text</string>
    <string name="no_matching_logins">No matching logins.</string>
    <string name="hint_hostname">Web address</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="launch_hostname_content_description">Open web address in web browser</string>
    <string name="copy_username_content_description">Copy username</string>
    <string name="toast_username_copied">Username copied</string>
    <string name="copy_password_content_description">Copy password</string>
    <string name="toast_password_copied">Password copied</string>
    <string name="display_password_content_description">Display your password in plain text</string>
    <string name="configuration_title">Configuration</string>
    <string name="support_title">Support</string>
    <string name="auto_lock">Auto lock</string>
    <string name="auto_lock_description">Auto lock setting</string>
    <string name="one_minute">1 minute</string>
    <string name="five_minutes">5 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="twelve_hours">12 hours</string>
    <string name="twenty_four_hours">24 hours</string>
    <string name="never">Never</string>
    <string name="autofill">Autofill</string>
    <string name="autofill_summary">Let %1$s fill in logins for you</string>
    <string name="autofill_description">Application autofill setting</string>
    <string name="send_usage_data">Send usage data</string>
    <string name="send_usage_data_summary">Mozilla strives to only collect what we need to provide and improve Firefox for everyone. </string>
    <string name="app_version_description">Application version number</string>
    <string name="app_version_title">App Version: %1$s (%2$d)</string>
    <string name="unlock">Unlock with fingerprint</string>
    <string name="fingerprint_description">Enable fingerprint setting</string>
    <string name="fingerprint_dialog_title">Unlock %1$s</string>
    <string name="unlock_fallback_title">Unlock %1$s</string>
    <string name="touch_fingerprint_sensor">Touch the fingerprint sensor.</string>
    <string name="enable_fingerprint_dialog_title">Enable Fingerprint</string>
    <string name="enable_fingerprint_dialog_subtitle">Give %1$s permission to unlock this app with the fingerprint sensor.</string>
    <string name="fingerprint_not_recognized">Not recognized</string>
    <string name="fingerprint_success">Success!</string>
    <string name="fingerprint_error_lockout">Too many attempts.</string>
    <string name="fingerprint_sensor_error">Fingerprint sensor error</string>
    <string name="confirm_pattern">Enter your device Pattern, PIN, or Password.</string>
    <string name="no_device_security_title">Secure your device.</string>
    <string name="no_device_security_message">In order to set the Auto lock timer, a Pattern, PIN, or Password must be set up on your device.</string>
    <string name="set_up_security_button">Set up Now</string>
    <string name="profile_image_content_description">Firefox Account Profile Image</string>
    <string name="account_information">To make changes to your account, log in to your Firefox Account from any browser.</string>
    <string name="disconnect_button">Disconnect %1$s</string>
    <string name="disconnect_disclaimer">This removes synced logins from %1$s, but will not delete your logins from Firefox.</string>
    <string name="disconnect_disclaimer_title">Disconnect %1$s?</string>
    <string name="disconnect_disclaimer_message">This will delete your Firefox Account information and all saved logins from %1$s.</string>
    <string name="disconnect">Disconnect</string>
    <string name="password_for">Password for %1$s</string>
    <string name="networkWarningMessage">Warning: device not connected to the internet.</string>
    <string name="warningIcon">Warning icon</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="network_connection_success">Network connection successful.</string>
    <string name="no_logins_found">No logins found</string>
    <string name="no_logins_description">%1$s lets you access passwords you’ve already saved to Firefox. To
        view your logins here, you’ll need to sign in and sync in Firefox.
    </string>
    <string name="onboarding_unlock_title">Unlock %1$s with your fingerprint.</string>
    <string name="onboarding_unlock_description">Give %1$s permission to unlock this app with the fingerprint sensor.</string>
    <string name="onboarding_skip">Skip for now</string>
    <string name="fingerprint_icon_description">Fingerprint image</string>
    <string name="onboarding_autofill_title">Let %1$s fill in your passwords for you.</string>
    <string name="onboarding_autofill_description">Easily fill usernames and passwords where you need them most.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="onboarding_autofill_image_description">%1$s Autofill</string>
    <string name="all_set">You’re all set!</string>
    <string name="finish">Finish</string>
    <string name="onboarding_access_description">Access logins saved to Firefox from your phone</string>
    <string name="onboarding_security_description">Sync between devices with secure 256-bit encryption</string>
    <string name="onboarding_convenience_description">Unlock the app with ease using your fingerprint</string>
    <string name="secure_your_device">Secure your device.</string>
    <string name="device_security_description">You should use a Pattern, PIN, or Password to lock your phone. Without this, anyone who has your phone can access the information saved here.</string>
    <string name="skip_button">Skip</string>
    <string name="set_up_now">Set Up Now</string>
    <string name="privacy">Privacy</string>
    <string name="autofill_authenticate_cta">Unlock %1$s</string>
    <string name="autofill_search_cta">Search %1$s</string>
    <string name="autofill_error_toast">%1$s encountered an error: %2$s</string>
    <string name="no_username">(no username)</string>
    <string name="kebab_menu">More options</string>
    <string name="delete">Delete</string>
    <string name="delete_this_login">Delete this login?</string>
    <string name="delete_description">This will delete the login from both %1$s and Firefox.</string>
    <string name="edit">Edit</string>
    <string name="entry_password_description">Password for this entry.</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard_changes_description">Your edits will not be saved.</string>
    <string name="discard">Discard</string>
    <string name="web_address_description">The hostname</string>
    <string name="username_description">The username</string>
    <string name="edit_login_title">Edit Login</string>
    <string name="password_invalid_text">Password cannot be empty</string>
    <string name="username_duplicate_exists">A login with that username already exists</string>
    <string name="create_hostname_description">Make sure this matches the exact domain for the website you are referencing (“https://” and “www” included).</string>
    <string name="create_title">New Login</string>
    <string name="create_username_hint_text">e.g., janedoe</string>
    <string name="create_hostname_hint_text">https://www.example.com</string>
    <string name="hostname_invalid_text">Web address must contain \“https://\“ or \“http://\“</string>
    <string name="hostname_invalid_host">Web address must have a valid hostname</string>
    <string name="hostname_empty_invalid_text">Hostname cannot be empty</string>
    <string name="successful_create_toast">Login added successfully</string>
    <string name="toast_icon_description">The icon that appears on a toast notification.</string>
    <string name="entry_deleted_toast">%1$s deleted</string>
    <string name="autochange_password">Refresh password</string>
    <string name="autochange_password_fake">Refresh password (UI)</string>
    <string name="autochange_homepage_finding">Loading website</string>
    <string name="autochange_homepage_found">Loaded website</string>
    <string name="autochange_login_finding">Finding the login page</string>
    <string name="autochange_login_found">Logging in with account details</string>
    <string name="autochange_login_success">Logged in</string>
    <string name="autochange_password_change_finding">Finding the password change screen</string>
    <string name="autochange_password_change_found">Changing to a new strong password</string>
    <string name="autochange_password_change_success">Finding the password change screen</string>
    <string name="autochange_log_out_finding">Logging out</string>
    <string name="autochange_log_out_success">Logged out</string>
    <string name="autochange_error_bad_credentials">The stored credentials aren\'t valid</string>
    <string name="autochange_error_captcha">AutochangeBot failed the Are You A Bot? question</string>
    <string name="autochange_error_2fa">Second factor authentication stops us</string>
    <string name="autochange_error_internal_error">An internal error has been detected</string>
    <string name="autochange_error_tos_blocking">A terms of service form blocks us</string>
    <string name="autochange_error_login_not_found">Can\'t find the login page</string>
    <string name="autochange_error_password_change_not_found">Can\'t find the account page</string>
    <string name="autochange_error_logout_not_found">Can\'t find the logout page</string>
    <string name="autochange_error_password_change_not_accepted">Our new password has not been accepted</string>
</resources>