<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~  License, v. 2.0. If a copy of the MPL was not distributed with this
  ~  file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AccountSettingFragment"
        android:orientation="vertical"
        android:background="@color/backgroundWhite">

    <include layout="@layout/include_backable"/>

    <ImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="67dp"
            android:contentDescription="@string/profile_image_content_description"
    />

    <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            android:textColor="@color/gray_73_percent"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:lineSpacingExtra="7.5sp"
            tools:text="@string/email_example"
    />

    <TextView
            android:id="@+id/accountInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/textGrey"
            android:lineSpacingExtra="7.5sp"
            android:gravity="center_horizontal"
            tools:text="@string/account_information"
    />

    <Button
            android:id="@+id/disconnectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:gravity="center_horizontal"
            tools:text="@string/disconnect_button"
    />

    <TextView
            android:id="@+id/disconnectDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/textGrey"
            android:lineSpacingExtra="7.5sp"
            android:gravity="center_horizontal"
            tools:text="@string/disconnect_disclaimer"
    />
</LinearLayout>
