<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~  License, v. 2.0. If a copy of the MPL was not distributed with this
  ~  file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <include layout="@layout/include_backable" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutHostname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/inputHostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hostname"
            android:inputType="none"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutHostname"
        >
        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="none"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutUsername">
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="none|textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>