<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~  License, v. 2.0. If a copy of the MPL was not distributed with this
  ~  file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/onboardingAutofill"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/WelcomeScreen">

    <ImageView
            android:id="@+id/iconAutofill"
            android:contentDescription="@string/onboarding_autofill_image_description"
            android:layout_width="match_parent"
            android:layout_weight="0.76"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_primary"
            android:translationX="35dp"
            android:translationY="-35dp"
            android:src="@drawable/ic_autofill_illustration"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <ImageView
            android:layout_width="800dp"
            android:layout_height="800dp"
            android:src="@drawable/ic_autofill_blob"
            android:translationX="-250dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="-270dp"
            android:layout_marginTop="195dp"
            android:contentDescription="@null"
            android:importantForAccessibility="no"
    />

    <TextView
            android:id="@+id/autofillTitle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/text_ink"
            android:lineSpacingExtra="6sp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/onboarding_autofill_title"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:layout_marginTop="280dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/autofillDescription"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/onboarding_text_size"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/text_ink"
            android:lineSpacingExtra="5sp"
            android:gravity="center_horizontal"
            android:text="@string/onboarding_autofill_description"
            android:layout_marginTop="12dp"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autofillTitle"
    />

    <Button
            android:id="@+id/goToSettings"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/go_to_settings"
            android:textColor="@color/text_white"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:letterSpacing="0.09"
            android:lineSpacingExtra="2sp"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/button_pressed_violet"
            android:textAllCaps="true"
            android:elevation="1dp"
            android:paddingStart="18dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="18dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/skipButton"
    />


    <Button
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/onboarding_skip"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/violet_70"
            android:letterSpacing="0.09"
            android:lineSpacingExtra="2sp"
            android:drawablePadding="10dp"
            android:shadowColor="@color/background_white"
            android:backgroundTint="@color/background_white"
            android:stateListAnimator="@null"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>